--- a/buttonsfactory.css
+++ b/buttonsfactory.css
@@ -1,6 +1,7 @@
 /* My Code Starts Here *//
-.sk-button{
+.mybutton{
     color: red;
     background-color: greenyellow;
     background-blend-mode: darken;
+    font-size: xxx-large;
 }
