--- a/buttonsfactory.css
+++ b/buttonsfactory.css
@@ -33,3 +33,81 @@ legend{color:inherit;display:table;max-width:100%;padding:0;white-space:normal}t
 
 .sk-tiny{font-size:10px!important}
 .sk-xlarge{font-size:24px!important}
+
+
+/*HTML Tags Formatting */
+h1,h2,h3,h4,h5,h6{
+    margin-top:0;
+    margin-bottom:.5rem
+}
+p{
+    margin-top:0;
+    margin-bottom:1rem
+}
+
+.h1,.h2,.h3,.h4,.h5,.h6,.h7,.h8,.h9,.h10,h1,h2,h3,h4,h5,h6{
+    margin-bottom:.5rem;
+    font-family:inherit;
+    font-weight:500;
+    line-height:1.2;
+    color:inherit
+}
+.h1,h1{
+    font-size:2.5rem
+}
+.h2,h2{
+    font-size:2rem
+}
+.h3,h3{
+    font-size:1.75rem
+}
+.h4,h4{
+    font-size:1.5rem
+}
+.h5,h5{
+    font-size:1.25rem
+}
+.h6,h6{
+    font-size:1rem
+}
+.h7{ font-size:0.875rem}
+.h8{ font-size:0.75rem}
+.h9{ font-size:0.625rem}
+.h10{ font-size:0.50rem}
+
+.lead{
+    font-size:1.5rem;
+    font-weight:500
+}
+.Text-Big-1{
+    font-size:5rem;
+    font-weight:400;
+    line-height:1
+}
+.Text-Big-2{
+    font-size:4.5rem;
+    font-weight:400;
+    line-height:1
+}
+.Text-Big-3{
+    font-size:3.5rem;
+    font-weight:400;
+    line-height:1
+}
+.Text-Big-4{
+    font-size:2.5rem;
+    font-weight:400;
+    line-height:1
+}
+.Text-Big-5{
+    font-size:1.5rem;
+    font-weight:400;
+    line-height:1
+}
+hr{
+    margin-top:1rem;
+    margin-bottom:1rem;
+    border:0;
+    border-top:1px solid rgba(0,0,0,.1)
+}
+
