--- a/buttonsfactory.css
+++ b/buttonsfactory.css
@@ -110,6 +110,6 @@ hr{
     border:0;
     border-top:1px solid rgba(0,0,0,.1)
 }
-.btn-grad {background-image: linear-gradient(to right, #003973 0%, #E5E5BE  51%, #003973  100%)}
-.btn-grad { margin: 10px; padding: 15px 45px; text-align: center; text-transform: uppercase; transition: 0.5s; background-size: 200% auto; color: white; box-shadow: 0 0 20px #eee; border-radius: 10px; display: block; } 
-.btn-grad:hover { background-position: right center; /* change the direction of the change here */ color: #fff; text-decoration: none; }
+.sk-btn-india {background-image: linear-gradient(to right, #003973 0%, #E5E5BE  51%, #003973  100%)}
+.sk-btn-india { margin: 10px; padding: 15px 45px; text-align: center; text-transform: uppercase; transition: 0.5s; background-size: 200% auto; color: white; box-shadow: 0 0 20px #eee; border-radius: 10px; display: block; } 
+.sk-btn-india:hover { background-position: right center; /* change the direction of the change here */ color: #fff; text-decoration: none; }
